# nanosecond-arbiter

./: .gitignore  COMPETITIVE_ANALYSIS.md  Cargo.toml  DEPLOY_AWS.md  PUBLISHING_GUIDE.md  Procfile  README.md  README_VISUALIZATION_SECTION.md  USAGE_GUIDE.md  VISUALIZATION_GUIDE.md  VISUALIZATION_QUICKSTART.md  VISUALIZATION_README.md  ai_trader.py  benchmark_results.txt  benchmark_runner.py  binance_bridge.py  check_orders.py  check_real_positions.py  crypto_trader.py  current_results.txt  dashboard_server.py  indian_fo_trader.py  liquidate_all.py  market_maker.py  matching_engine.rs  price_action_trader.py  quant_trader.py  railway.json  recent_log.txt  render.yaml  requirements.txt  run_visualization_pipeline.py  safe_trader.py  start_render.sh  test_retry.py  track_performance.py  trade_log.txt  visualize.py
deploy/: nanosecond-dashboard.service  nanosecond-trader.service  setup.sh
docs/: BOT_EXPLANATION.md  CLOUD_DEPLOYMENT.md  CUSTOMER_GUIDE.md  DATA_STORAGE.md  FILE_ORGANIZATION.md  GUMROAD_CHECKLIST.md  GUMROAD_LISTING.md  HOW_TO_RUN.md  MONETIZATION_GUIDE.md  PROJECT_STRUCTURE.md  RAILWAY_DEPLOY.md  TRADING_GUIDE.md  UNDERSTANDING_TRADES.md  WEEK_TESTING_PLAN.md
examples/: README.md  audio_processing.rs  game_engine.rs  iot_sensors.rs  video_processing.rs
quant_engine/: config.py  data_twelvedata.py  data_twelvedata_ws.py  data_upstox.py  execution_forex.py  execution_futures.py  execution_indian.py  execution_spot.py  risk.py  strategy.py  strategy_forex.py  strategy_futures.py  strategy_indian_fo.py  strategy_price_action.py  strategy_spot.py  strategy_trend_momentum.py  watchdog.py
src/: benchmark.rs  gateway.rs  http_server.rs  main.rs  matching_engine.rs
web/: app.js  index.html  next.config.ts  package-lock.json  package.json  styles.css  tailwind.config.ts
web/src/app/: globals.css  page.tsx
web/src/components/dashboard/: AccountSummary.tsx  DashboardPanel.tsx  ForexChart.tsx  ForexMarketSection.tsx  ForexPriceCards.tsx  Header.tsx  PnLPanel.tsx  PositionsTable.tsx  (+2 more)
web/src/hooks/: useBinanceWS.ts  useChartData.ts  useForexCandles.ts  useForexMarketData.ts  useTraderData.ts
web/src/types/: index.ts
