[package]
name = "hft_ringbuffer"
version = "0.1.0"
edition = "2021"

[dependencies]
# rtrb: Real-Time Ring Buffer - Lock-free SPSC queue
# Perfect for HFT because it avoids mutex overhead
rtrb = "0.3"

[profile.release]
# Aggressive optimizations for HFT performance
opt-level = 3           # Maximum optimization
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization at cost of compile time
panic = "abort"         # Smaller binary, faster panics
strip = true            # Remove debug symbols
