[package]
name = "hft_ringbuffer"
version = "0.1.0"
edition = "2021"

[dependencies]
# rtrb: Real-Time Ring Buffer - Lock-free SPSC queue
# Perfect for HFT because it avoids mutex overhead
rtrb = "0.3"

[[bin]]
name = "hft_ringbuffer"
path = "src/main.rs"

[[bin]]
name = "video_processing"
path = "examples/video_processing.rs"

[[bin]]
name = "iot_sensors"
path = "examples/iot_sensors.rs"

[profile.release]
# Aggressive optimizations for HFT performance
opt-level = 3           # Maximum optimization
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization at cost of compile time
panic = "abort"         # Smaller binary, faster panics
strip = true            # Remove debug symbols
